Download link to full program

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -6,6 +6,8 @@ schedule:
     <img src="/images/bit.ly_mwglrm-2023.png" alt="QR Code image" style="height: 200px; width:200px">  
     Or click <a href="https://acs-meetings.s3.amazonaws.com/mwglrm-2023/index.html" target="_blank">HERE</a> to open the schedule in a new window.
 
+    The full (450 page!) program can be downloaded <a href="https://www.stlacs.org/wordpress/wp-content/uploads/2023/10/MWGL-2023-Final-Program-Sept-5-2023.pdf" target="_blank">HERE</a>.
+
     <iframe
     src="https://acs-meetings.s3.amazonaws.com/mwglrm-2023/index.html"
     style="width:800px; height:800px;"
