Added Zinc Sponsor Level

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -130,9 +130,12 @@ sponsor:
           link : "https://illinois.edu/"
         - logo : "images/clients/Ag-UMSL2.png"
           link : "https://www.umsl.edu/"
+        
+  ############################ sponsor group loop
+    - title : "Zinc Level Sponsors"
+      sponsor:
         - logo : "images/clients/Rigaku.jpeg"
           link : "https://www.rigaku.com/"
-        
 
       ############################ sponsor group loop
     - title : "Event Sponsors"
