--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -4,9 +4,9 @@ schedule:
   content_overview : |
     The full schedule can be accessed on your phone via the QR code below:  
     <img src="/images/bit.ly_mwglrm-2023.png" alt="QR Code image" style="height: 200px; width:200px">  
-    Or click <a href="https://acs-meetings.s3.amazonaws.com/mwglrm-2023/index.html" target="_blank">HERE</a> to open the schedule in a new window.
-
-    The full (450 page!) program can be downloaded <a href="https://www.stlacs.org/wordpress/wp-content/uploads/2023/10/MWGL-2023-Final-Program-Sept-5-2023.pdf" target="_blank">HERE</a>.
+    Or click <a href="https://acs-meetings.s3.amazonaws.com/mwglrm-2023/index.html" target="_blank">HERE</a> to open the oneline schedule in a new window.
+    - The full (450 page!) program can be downloaded <a href="https://www.stlacs.org/wordpress/wp-content/uploads/2023/10/MWGL-2023-Final-Program-Sept-5-2023.pdf" target="_blank">HERE</a>.  
+    - If you prefer a one-page "Schedule At A Glance," it can be downloaded <a href="https://www.stlacs.org/wordpress/wp-content/uploads/2023/10/MWGLRM_202310-MaaG.pdf" target="_blank">HERE</a>
 
     <iframe
     src="https://acs-meetings.s3.amazonaws.com/mwglrm-2023/index.html"
